--- a/argentinaturismo.html
+++ b/argentinaturismo.html
@@ -8,44 +8,48 @@
   <!--La Funcion Header es el encabezado de la Pagina-->
     <header>
     <div class="menu">
-        <img id= "logo" src="../futbolargentina/imagen/logo.png"  alt="">
+        <img id= "logo" src="logo.png"  alt="">
         <nav>
           <!--La Funcion <ul>	Establece el contenedor de una lista de elementos donde no importa el orden -->
         <ul>
-          <li><a href="argentinaturismo.html"  target="_blank" rel="noopener noreferrer">Inicio</a></li>
-          <li><a href="servidores.html">Servidores</a></li>
-          <li><a href="clubes.html">Clubes</a></li>
-          <li><a href="goleadores.html">Goleadores</a></li>
+          <li><a href="./home.html">Inicio</a></li>
+          <li><a href="#">Servidores</a></li>
+          <li><a href="#">Clubes</a></li>
+          <li><a href="#">Goleadores</a></li>
         </ul>
         </nav>
     </div>
     </header>
 <div>
+   <img id="scaloneta" src="mundial.webp" alt="">
    <!-- abrimos varios div para darle texto a las imagenes -->
-    <a href="todosobreelfutbolargentino.html" target="_blank" rel="noopener noreferrer"><img id="scaloneta" src="../futbolargentina/imagen/mundial.webp" alt="argentina"></a>
-    <div><h1>Todo Sobre El Futbol Argentino</h1></div>
+   <div>
+    <h1>Todo Sobre El Futbol Argentino</h1>
 </div>
 <div>
   <h1 id="h22">Argentina Futbol</h1>
 </div>
 <div>
-  <a href="entrevistasexclusivas.html" target="_blank" rel="noopener noreferrer"><img id="boquita" src="../futbolargentina/imagen/boca.jpg" alt="boca"></a>
-  <div><h1 class="cabj"> Entrevistas Exclusivas</h1></div>
+  <img id="boquita" src="boca.jpg" alt="">
+  <div>
+    <h1 class="cabj"> Entrevistas Exclusivas</h1>
   </div> 
 </div>
 <div>
-  
-  <a href="todosobrelosultimospartidos.html" target="_blank" rel="noopener noreferrer"><img id="estudiantes" src="../futbolargentina/imagen/estudiantes.jpg" alt=""></a>
+  <img id="estudiantes" src="estudiantes.jpg" alt="">
+  <div>
     <h1 class="edelp"> Todo Sobre Los Ultimos Partidos</h1>
   </div> 
 </div>
 <div>
-  <a href="lassiguientesfechas.html" target="_blank" rel="noopener noreferrer"><img id="gimnasia" src="../futbolargentina/imagen/gimnasia.jpg" alt=""></a>
+  <img id="gimnasia" src="gimnasia.jpg" alt=""> 
+  <div>
     <h1 class="gelp"> Las Siguientes Fechas</h1>
   </div> 
 </div>
 <div>
-   <a href="plataformasgratisparavertodoslospartidos.html" target="_blank" rel="noopener noreferrer"><img id="river" src="../futbolargentina/imagen/river.jpg" alt=""></a>
+  <img id="river" src="river.jpg" alt=""> 
+  <div>
     <h1 class="carp"> Plataformas Gratis para Ver todos los partidos.</h1>
   </div> 
 </div>
